- Replace sassc-rails with dartsass-sprockets, as it's a compatible replacement, to ease migration to dartsass
- Use lowercase response headers as required by rack 3
- Add filters to list action
- Add prompt option to action link
- Support tabbed_by in show action too

= 4.0.4.2
- Support show key in helpers for search date/datetime, to change default condition to render it hidden

= 4.0.3
- Fix for jQuery 3
- Fix position popup for collection action links
- Fix recordselect in form open with position popup
- Fix class of subform on optional subform using add_new option with layout option
- Fix constraints with mulitple ids for belongs_to associations with primary_key setting
- Fix render_field when a column changes, and a column to refresh exists in a subform with the same name too

= 4.0.2
- Fix using update_columns in field search with search UI submitting a hash, such as date fields
- Support disabling update_columsns on field_search

= 4.0.1
- Add :text_editor show_ui, to avoid escaping html code
- Fix action link on association column named record

= 4.0.0
- Add tabbed_by to group of columns in forms. The columns in the group must be collection associations, with a common column or association, used to partition them in different tabs.
- Fix tableless in rails >= 7.1
- Stop using cow_proxy for thread safety:
  - Added ProxyColumn and require using active_scaffold_config.columns.override(:column_name) to change a column per request
  - Action links can't be changed, added or removed, add all links and use ignore_method to control when they are displayed
  - Require using active_scaffold_config.override_columns to exclude or add columns
- Thread safety enabled by default, can't be disabled, deprecate ActiveScaffold.threadsafe!
- Support subgroups on field search

= 3.7.12
- Fix using update_columns in field search with search UI submitting a hash, such as date fields
- Support disabling update_columsns on field_search

= 3.7.11.1